Issue #25387: Check return value of winsound.MessageBeep